--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
 </head>
 <body>
     <header></header>
-    <main> 
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="banner- text">
+                    <h1 class="title">Let's make <br>
+                         beautiful flowers a <br>part of your life.</h1>
+                    <p class="p-description">It is a long established fact that
+                         a reader will be distracted by the readable 
+                         content of a page when looking at its layout.
+                          The point of using Lorem Ipsum is that it has a more-or-less
+                         normal distribution of letters.
+                     </p>
+                        <button class="btn"> Shop here</button>
+                </div>
+                <div class="banner-photo">
+                    <img class="banner-img" src="image/Flower Asset/pngwing 10.png" alt="">
+                </div>
+        </section>
 
     </main>
     <footer></footer>
