added picture and section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <button class="btn"> Shop here</button>
                 </div>
                 <div class="banner-photo">
-                    <img class="banner-img" src="image/Flower Asset/pngwing 10.png" alt="">
+                    <img class="banner-img" src="image/pngwing 10.png" alt="">
                 </div>
         </section>
 
