--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
                     <img class="banner-img" src="image/pngwing 10.png" alt="">
                 </div>
         </section>
+        <section class="ex">
+            <h3 class="title-ex">Our Featured Flowers</h3>
+            <div class="tiitle-des-ex">It is a long established fact that
+                 a reader will be distracted by the readable  
+                 <br>content of a page when looking at its layout.</div>
+        </section>
+       <section>
+        <div class="banner-container-nd">
+            <div class="banner- text-nd">
+                <h1 class="title-nd">Hot Deal ! Sale Up To 25%<span class="color">Off</span></h1>
+                <p class="p-description-nd">It is a long established
+                     fact that a reader will be distracted by
+                      the readable <br> content of a page when looking at its layout.
+                 </p>
+                    <button class="btn-nd"> Sign Up</button>
+            </div>
+            <div class="banner-photo-nd">
+                <img class="banner-img-nd" src="image/pngwing 8.png" alt="">
+            </div>
+       </section>
+       <section class="ex">
+        <h3 class="title-ex">Our Featured Flowers</h3>
+        <div class="tiitle-des-ex">It is a long established fact that
+             a reader will be distracted by the readable  
+             <br>content of a page when looking at its layout.</div>
+    </section>
+            
+        
 
     </main>
     <footer></footer>
