--- a/index.html
+++ b/index.html
@@ -52,8 +52,28 @@
              a reader will be distracted by the readable  
              <br>content of a page when looking at its layout.</div>
     </section>
+    <section>
+        <div class="last-one">
+            <h3 class="last-one-title">Get The Latest Deals</h3>
+            <p class="last-one-discription">$30 coupon for first shopping</p>
+            <div class="loseb">
+                <input class="email" type="email" placeholder=" enter your email hear">
+            <button class="btn-nd-l-one">submit</button>
+            </div>
+        </div>
+    </section>
             
     </main>
-    <footer></footer>
+    <footer>
+        <div class="foot">
+            <h3 class="foot-title">FlowerShop</h3>
+            <p class="foot-descreption">It is a long established fact 
+                that a reader will be distracted
+                 by the readable <br> content of
+                a page when looking at its layout.</p>
+            <p class="foot-descreption-s"> @2020-2023, FlowerShop.com.
+                 All rights reserved. </p>
+        </div>
+    </footer>
 </body>
 </html>
