--- a/index.html
+++ b/index.html
@@ -47,10 +47,26 @@
             </div>
        </section>
        <section class="ex">
-        <h3 class="title-ex">Our Featured Flowers</h3>
+        <h3 class="title-ex">Instagram</h3>
         <div class="tiitle-des-ex">It is a long established fact that
              a reader will be distracted by the readable  
              <br>content of a page when looking at its layout.</div>
+    </section>
+    <section class="images">
+        <div class="containet-img">
+            <div class="box">
+                <img src="image/Flower 01.png" alt="">
+            </div>
+            <div class="box">
+                <img src="image/pngwing 6.png" alt="">
+            </div>
+            <div class="box">
+                <img src="image/pngwing 5.png" alt="">
+            </div>
+            <div class="box">
+                <img src="image/Rectangle 4.png" alt="">
+            </div>
+        </div>
     </section>
     <section>
         <div class="last-one">
