--- a/index.html
+++ b/index.html
@@ -26,11 +26,29 @@
                     <img class="banner-img" src="image/pngwing 10.png" alt="">
                 </div>
         </section>
+       
         <section class="ex">
             <h3 class="title-ex">Our Featured Flowers</h3>
             <div class="tiitle-des-ex">It is a long established fact that
                  a reader will be distracted by the readable  
                  <br>content of a page when looking at its layout.</div>
+        </section>
+        <section>
+            <div class="image">
+                <div class="box-b">
+                    <img class="pic" src="image/Flower 01.png" alt="">
+                </div>
+                <div class="box-b">
+                    <img class="pic" src="image/pngwing 6.png" alt="">
+                </div>
+                <div class="box-b">
+                    <img class="pic" src="image/pngwing 5.png" alt="">
+                </div>
+                <div class="box-b">
+                    <img class="pic" src="image/Rectangle 4.png" alt="">
+                </div>
+            </div>
+            
         </section>
        <section>
         <div class="banner-container-nd">
@@ -52,7 +70,7 @@
              a reader will be distracted by the readable  
              <br>content of a page when looking at its layout.</div>
     </section>
-    <section class="images">
+    <section>
         <div class="containet-img">
             <div class="box">
                 <img src="image/Flower 01.png" alt="">
