added nav ber and list icon chang text

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-first-assignment-1</title>
+
+    <script src="https://kit.fontawesome.com/74d3e6b0f5.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <section>
+            <nav>
+                <h2 class="nav-title" >Wellcome</h2>
+                <ul>
+                    <li> Home</li>
+                    <li>Service</li>
+                    <li> About</li>
+                </ul>
+            </nav>
+        </section>
+    </header>
     <main>
         <section>
             <div class="banner-container">
@@ -49,6 +63,22 @@
                 </div>
             </div>
             
+        </section>
+        <section>
+           <div class="extra">
+            <div class="si">
+                <h1><i class="fa-solid fa-person"></i></h1>
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="si"> 
+                <h1><i class="fa-solid fa-seedling"></i></h1>
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="si">
+               <h1><i class="fa-solid fa-phone-volume"></i></h1>
+                <p>24/7 Free Support.</p>
+            </div>
+           </div>
         </section>
        <section>
         <div class="banner-container-nd">
