added menu icon

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <nav>
                 <h2 class="nav-title" >Wellcome</h2>
                 <ul>
-                    <li> Home</li>
-                    <li>Service</li>
-                    <li> About</li>
+                    <li><i class="fa-solid fa-house"></i><br> Home</li>
+                    <li><i class="fa-solid fa-cart-shopping"></i><br>Service</li>
+                    <li><i class="fa-solid fa-magnifying-glass"></i><br> About</li>
                 </ul>
             </nav>
         </section>
