style wellcomr text and color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <section>
             <nav>
-                <h2 class="nav-title" >Wellcome</h2>
+                <h2 class="nav-title" >W<sup>e </sup>ll<sub>c</sub>o<sub>m</sub>e</h2>
                 <ul>
                     <li><i class="fa-solid fa-house"></i><br> Home</li>
                     <li><i class="fa-solid fa-cart-shopping"></i><br>Service</li>
